ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-auth
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Handle requests under /auth
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.local
      http:
        paths:
          - path: /auth(/|$)(.*)  # Match /auth and any sub-paths
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-auth
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-account
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Adjust rewrite-target to retain the subpath
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.local
      http:
        paths:
          - path: /account(/|$)(.*)  # Use regex to match subpaths
            pathType: ImplementationSpecific  # Use ImplementationSpecific to support regex paths
            backend:
              service:
                name: service-account
                port:
                  number: 80
